--- a/Develop/style.css
+++ b/Develop/style.css
@@ -13,6 +13,21 @@ textarea{
   padding: 10px;
 }
 
+::-webkit-input-placeholder { /* Chrome */  /* https://htmlcolorcodes.com/tutorials/css-placeholder-color/#:~:text=Changing%20placeholder%20text%20color&text=Input%20(and%20textarea)%20placeholder%20text,HEX%2C%20RGB%2C%20HSL). */
+  color: white;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: white;
+  opacity: 1;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -65,11 +80,7 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.save-Btn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
-}
-
-.test {
-  font-size: x-large;
 }
