--- a/Develop/style.css
+++ b/Develop/style.css
@@ -8,9 +8,10 @@ textarea{
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
+  color: white;
   border-left: 1px solid black;
   padding: 10px;
+  width:100%;
 }
 
 ::-webkit-input-placeholder { /* Chrome */  /* https://htmlcolorcodes.com/tutorials/css-placeholder-color/#:~:text=Changing%20placeholder%20text%20color&text=Input%20(and%20textarea)%20placeholder%20text,HEX%2C%20RGB%2C%20HSL). */
@@ -78,9 +79,10 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  cursor: pointer;
 }
 
-.save-Btn i:hover {
+.save-btn i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all .2s ease-in-out;
 }
